add anyhow, rename weather_provider to weather_abstractions

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,3 +1,3 @@
 [workspace]
 
-members = ["weather", "weather-provider", "providers/*"]
+members = ["weather", "weather-abstractions", "providers/*"]
