--- a/weather-abstractions/Cargo.toml
+++ b/weather-abstractions/Cargo.toml
@@ -1,5 +1,5 @@
 [package]
-name = "weather-provider"
+name = "weather-abstractions"
 version = "0.1.0"
 edition = "2021"
 
@@ -18,3 +18,4 @@ url = "2.3.1"
 tokio = { version = "1.25.0", features = ["macros"] }
 rstest = "0.16.0"
 async-std = { version = "1.12.0", features = ["attributes"] }
+anyhow = "1.0.69"
